# TripQ-API

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  main.py  pyproject.toml
.github/workflows/: qa.yml
apps/main/templates/: base.html  car-rental.html
apps/main/templates/admin/: base_site.html
apps/main/templates/car-rental/: index.html
apps/main/templates/includes/: footer.html  header.html  meta.html  navigator.html
apps/route/: urls.py
apps/settings/admin/: CurrencyAdmin.py  SettingsAdmin.py  __init__.py
apps/settings/migrations/: 0001_initial.py  0002_alter_setting_options_alter_setting_table.py  0003_alter_currency_table.py
apps/settings/models/: Currency.py  Setting.py  __init__.py
apps/settings/templatetags/: __init__.py  currency.py
core/: settings.py  urls.py
static/css/common/: colors.css  style.css
static/js/common/: api.js
static/js/util/: util.js
static/js/util/widget/: AutoComplete.js  DataTable.js
vvecon/zorion/: App.py  __init__.py  apps.py
vvecon/zorion/app/: asgi.py  wsgi.py
vvecon/zorion/app/settings/: __init__.py  base.py  env.py  logger.py
vvecon/zorion/auth/: JWTProvider.py  __init__.py
vvecon/zorion/core/: ModelResponse.py  Response.py  Service.py  __init__.py
vvecon/zorion/enums/: Method.py  __init__.py
vvecon/zorion/templatetags/: __init__.py  files.py  util.py
vvecon/zorion/urls/: __init__.py
vvecon/zorion/utils/: Data.py  Files.py  Images.py  R.py  Theme.py  Utils.py  __init__.py
vvecon/zorion/views/: API.py  JWTView.py  Mapping.py  View.py  __init__.py
(+6 files in other folders)
